# ix.BKP-S-DS-UTM-

./: .clasp.json  .dockerignore  .gitignore  .gitmessage  .ihfm-cache.json  .mcp.json  .replit  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  JOBS.md  READEME.md  README.md  SONHOS.md  _Start(▶︎)_.command  agendor_api.py  conversions.py  docker-compose.yml  ix-wp.profile.json  ix.BLZ-S(DS+UTM).code-workspace  ix.project.json  logger.py  ltv.py  main.py  mappings.py  notes_builder.py  package.json  parsers.py  pd_api.py  product_match.py  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: ix-wp-automato.instructions.md  ix-wp-brisa.instructions.md  ix-wp-code.instructions.md  ix-wp-core.instructions.md  ix-wp-git.instructions.md  ix-wp-iHFM.instructions.md  ix-wp-linear.instructions.md  ix-wp-notifications.instructions.md
.github/workflows/: commit-format.yml  parallel-merge-orchestrator.yml
1-dev/: README.md
2-deploy/: README.md
_docs/: deal_score_metodologia.md  merlin-meta-value-estimation.md  palette.json
_docs/_ArquivoMorto/: JOBS.md-rogue-1776359579475  deals_analysis.db-rogue-1776359579475
_docs/_JOBS/: JOBS.md  quiz-responses.json
_docs/agents/: CODEX.md  COPILLOT.md
_docs/deals/: deals-3157616-572.csv  (+1 more)
dealscore/: client_priority.py  deal_score.py  deal_score_rules.py
docs/: INTEGRATION-LEAD-FORMS.md  agendor-bkp-eventos.md  agendor-webhooks.md  enrichment.md
enrichment/: __init__.py  adapter_agendor.py  cnpj.py  email_utils.py  google_cse.py  ninjapear.py  pipeline.py  scraping.py  sources_status.py  whatsapp.py
modules/: db.py  ix-delscore-sync.js  locks.py
scripts/: .batch_progress.txt  PipedrivePull.gs  analyze_ltv.py  analyze_won_products.py  backfill_ltv_won.py  batch_cron.sh  batch_enrich.py  batch_update_all_scores.py  build_deals_analysis_db.py  build_mopgled.sh  clean_duplicate_notes.py  export_customer_match.py  export_customer_match_leads.py  gen_dealscore_xlsx.py  ltv_analysis.json  map_fields.py  prefill_dealscore_fields.py  won_products_analysis.json
static/: dates_ui.js  mopgled.css  mopgled.js  sync_ui.js
templates/: base.html  dates_ui.html  sync_ui.html
(+145 files in other folders)
